Isolate collection wrong reaction #64990

Closed
opened 2019-05-22 14:51:05 +02:00 by Aleksandr · 8 comments

System Information
Operating system: Linux-4.15.0-50-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56

Blender Version
Broken: version: 2.80 (sub 71), branch: blender2.7, commit date: 2019-05-21 22:53, hash: 8accb5a46f
Worked: (optional)

Short description of error
First reaction on "Isolate" is hide all collections. Second reaction is unhide selected collection. "Isolate" collection has no opposite action (I can not to isolate collection then click again this command and reveal other collections that was be visible before isolation of selected collection)

Exact steps for others to reproduce the error
Right click on Collection in Outliner - Isolate.

**System Information** Operating system: Linux-4.15.0-50-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56 **Blender Version** Broken: version: 2.80 (sub 71), branch: blender2.7, commit date: 2019-05-21 22:53, hash: `8accb5a46f` Worked: (optional) **Short description of error** First reaction on "Isolate" is hide all collections. Second reaction is unhide selected collection. "Isolate" collection has no opposite action (I can not to isolate collection then click again this command and reveal other collections that was be visible before isolation of selected collection) **Exact steps for others to reproduce the error** Right click on Collection in Outliner - Isolate.
Author

Added subscriber: @viadvena

Added subscriber: @viadvena
Member

Added subscribers: @WilliamReynish, @JacquesLucke

Added subscribers: @WilliamReynish, @JacquesLucke
Member

I don't think this is a bug currently, that is just how it works for now.

Not sure if there are plans to change it, @WilliamReynish?

I don't think this is a bug currently, that is just how it works for now. Not sure if there are plans to change it, @WilliamReynish?
Author

Снимок экрана_2019-05-22_16-28-47.png
https://twitter.com/viadvena/status/1129701389700083713

In #64990#685364, @JacquesLucke wrote:
I don't think this is a bug currently, that is just how it works for now.

![Снимок экрана_2019-05-22_16-28-47.png](https://archive.blender.org/developer/F7060970/Снимок_экрана_2019-05-22_16-28-47.png) https://twitter.com/viadvena/status/1129701389700083713 > In #64990#685364, @JacquesLucke wrote: > I don't think this is a bug currently, that is just how it works for now.
Dalai Felinto was assigned by Brecht Van Lommel 2019-05-29 02:30:51 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

I guess this is a matter of making the entry in the right click menu do the same thing as ctrl + click on the icon.

I guess this is a matter of making the entry in the right click menu do the same thing as ctrl + click on the icon.

This issue was referenced by 6f9518f243

This issue was referenced by 6f9518f2438ecca411cee85303f255cea853545b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64990
No description provided.